Fixed alignment issues with form inputs and certificate elements, fixed print to not cut off in landscape.

--- a/main.css
+++ b/main.css
@@ -63,10 +63,15 @@
     font-weight: bold;
     text-align: center;
     position: absolute;
-    margin-left: 250px;
-    width: 600px;
+    margin-left: 238px;
+    width: 585px;
     max-height: 110px;
     word-wrap: break-spaces;
+}
+
+.titleCont {
+    width: 600px;
+    height: 110px;
 }
 
 .line2 {
@@ -83,7 +88,7 @@
     position: absolute;
     font-size: 18px;
     font-style: italic;
-    margin-left: 470px;
+    margin-left: 471px;
     margin-top: 140px;
 }
 
@@ -92,7 +97,7 @@
     position: absolute;
     font-size: 18px;
     font-style: italic;
-    margin-left: 517px;
+    margin-left: 520px;
     margin-top: 240px;
 }
 
@@ -101,9 +106,9 @@
     font-style: italic;
     text-align: center;
     position: absolute;
-    margin-left: 688px;
-    margin-top: 485px;
-    width:250px;
+    margin-left: 625px;
+    margin-top: 490px;
+    width:400px;
     word-wrap: break-spaces;
 }
 .line6 {
@@ -111,9 +116,9 @@
     font-style: italic;
     text-align: center;
     position: absolute;
-    margin-left: 675px;
+    margin-left: 625px;
     margin-top: 532px;
-    width:250px;
+    width:400px;
 }
 
 .title2edit {
@@ -122,9 +127,8 @@
     font-weight: bold;
     text-align: center;
     position: absolute;
-    width: 450px;
-    word-wrap: break-spaces;
-    margin-left: 305px;
+    margin-left: 236px;
+    width: 595px;
     margin-top: 190px;
 }
 
@@ -134,9 +138,9 @@
     text-align: center;
     position: absolute;
     word-wrap: break-spaces;
-    margin-left: 445px;
+    width: 550px;
+    margin-left: 255px;
     margin-top: 70px;
-
 }
 
 .title32 {
@@ -145,8 +149,9 @@
     text-align: center;
     position: absolute;
     word-wrap: break-spaces;
+    width: 250px;
     margin-top: 285px;
-    margin-left: 438px;
+    margin-left: 405px;
 }
 
 .title3edit {
@@ -154,8 +159,8 @@
     font-weight: bold;
     text-align: center;
     position: absolute;
-    word-wrap: break-spaces;
-    margin-left: 418px;
+    margin-left: 240px;
+    width: 580px;
     margin-top: 70px;
 }
 
@@ -166,7 +171,8 @@
     position: absolute;
     word-wrap: break-spaces;
     margin-top: 285px;
-    margin-left: 462px;
+    width: 575px;
+    margin-left: 243px;
 }
 
 
@@ -175,9 +181,9 @@
     font-style: italic;
     text-align: center;
     position: absolute;
-    margin-left: 685px;
+    margin-left: 625px;
     margin-top: 515px;
-    width:250px;
+    width:400px;
     word-wrap: break-spaces;
 }
 
@@ -186,9 +192,9 @@
     font-style: italic;
     text-align: center;
     position: absolute;
-    margin-left: 685px;
+    margin-left: 675px;
     margin-top: 550px;
-    width:250px;
+    width:300px;
     word-wrap: break-spaces;
 }
 
@@ -197,8 +203,6 @@
     font-size:14px;
     width:500px;
     height:75px;
-    margin-bottom: 5px;
-    margin-left: 0.2vw;
     background-color: #efefef;
     border: solid 1px #cccccc;
     -webkit-border-radius: 5px;
